Mudança de gramática

--- a/new 1.html
+++ b/new 1.html
@@ -74,7 +74,7 @@ mostra(nome + " seu IMC esta muito alto, você está classificado como obesidade
 
 if (imcPedro >= 40) {
 
-mostra(nome + " seu IMC está extremamente alto, você esta classificado como obesidade nivel 3(mórbida), proure um médico e um nutricionista")
+mostra(nome + " seu IMC está absurdamente alto, você esta classificado como obesidade nivel 3(mórbida), proure um médico e um nutricionista")
 
 }
 
